# rules_rust

./: CODEOWNERS  WORKSPACE  workspace.bzl
crate_universe/: extensions.bzl
crate_universe/private/: crate.bzl
crate_universe/src/: config.rs  lockfile.rs  rendering.rs
crate_universe/src/context/: crate_context.rs
crate_universe/src/rendering/: template_engine.rs
examples/: BUILD
examples/crate_universe/alias_rule/: cargo-bazel-lock_global_alias_annotation_none.json  cargo-bazel-lock_global_alias_annotation_opt.json  cargo-bazel-lock_global_custom_annotation_none.json  cargo-bazel-lock_global_dbg_annotation_fastbuild.json  (+3 more)
examples/proto/helloworld/: main.rs  (+1 more)
proto/raze/: BUILD  Cargo.toml  crates.bzl
proto/raze/remote/: bytes-0.5.4.BUILD  grpc-0.6.2.BUILD  httpbis-0.7.0.BUILD  lazy_static-1.4.0.BUILD  log-0.3.9.BUILD  log-0.4.8.BUILD  mio-0.6.21.BUILD  pin-project-lite-0.1.4.BUILD  protobuf-2.8.2.BUILD  tls-api-0.2.1.BUILD  tls-api-stub-0.2.1.BUILD  tokio-0.2.18.BUILD  tokio-core-0.1.17.BUILD  tokio-io-0.1.13.BUILD  tokio-reactor-0.1.12.BUILD  tokio-threadpool-0.1.18.BUILD  tokio-tls-api-0.1.22.BUILD  tokio-udp-0.1.6.BUILD  tokio-uds-0.1.7.BUILD  tokio-uds-0.2.6.BUILD
rust/: BUILD  known_shas.bzl  repositories.bzl  rust.bzl  toolchain.bzl  toolchain_fetching.bzl  triple_mappings.bzl  utils.bzl
rust/private/: clippy.bzl  rust.bzl  rustc.bzl
test/clippy/: BUILD  clippy_test.py  testutil.py
util/: BUILD  check_bazel_version.bzl  fetch_shas.sh  fetch_shas_TOOLS.txt  fetch_shas_VERSIONS.txt  reload_shas.sh  reload_shas_TARGETS.txt  reload_shas_TOOLS.txt
(+16 files in other folders)
