
[package]
name = "fake_lib"
version = "0.0.1"

[lib]
path = "lib.rs"

[dependencies]
protobuf = { version = "=2.8.2", features = ["with-bytes"] }
protobuf-codegen = "=2.8.2"
grpc = "=0.6.2"
grpc-compiler = "=0.6.2"
tls-api = "=0.3.2"
tls-api-stub = "=0.3.2"

[raze]
genmode = "Remote"
workspace_path = "//proto/raze"

[raze.crates.lazy_static.'1.2.0']
additional_flags = [
  "--cfg=lazy_static_heap_impl",
]

[raze.crates.protobuf.'2.8.2']
gen_buildrs = true

[raze.crates.protobuf-codegen.'2.8.2']
extra_aliased_targets = ["cargo_bin_protoc_gen_rust"]

[raze.crates.grpc-compiler.'0.6.2']
extra_aliased_targets = ["cargo_bin_protoc_gen_rust_grpc"]
